virt01/manual/databases/influxdb/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: influxdb
  template:
    metadata:
      labels:
        app: influxdb
#      annotations:
#        backup.velero.io/backup-volumes: influxdb-pv,influxdb-etc-pv
    spec:
      serviceAccountName: influxdb-sa
      containers:
        - name: influxdb
          image: influxdb:2.7.11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8086
              name: influxdb-port
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: "2Gi"
            requests:
              cpu: "10m"
              memory: "128Mi"
          volumeMounts:
            - name: influxdb-pv
              mountPath: /var/lib/influxdb2
            - name: influxdb-etc-pv
              mountPath: /etc/influxdb2
      volumes:
        - name: influxdb-pv
          persistentVolumeClaim:
            claimName: influxdb-pvc
        - name: influxdb-etc-pv
          persistentVolumeClaim:
            claimName: influxdb-etc-pvc
