virt01/manual/databases/influxdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: influx-ingress
  namespace: databases
  annotations:
    cert-manager.io/cluster-issuer: nf-lab
    cert-manager.io/private-key-rotation-policy: Always
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    kubernetes.io/ingress.class: traefik
    external-dns.alpha.kubernetes.io/target: traefik.k3s.nf.lab
spec:
  rules:
  - host: influx.k3s.nf.lab
    http:
      paths:
      - backend:
          service:
            name: influxdb-svc
            port:
              number: 8086
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - influx.k3s.nf.lab
    secretName: influx-cert-tls
